[fix 1434767] Date cut off on Activities panel on Dashboard (#1459)
* [fix 1434767] Date cut off on Activities panel on Dashboard

--- a/remo/base/static/base/css/app-fd4.less
+++ b/remo/base/static/base/css/app-fd4.less
@@ -3270,6 +3270,7 @@ table tr.assigned-request:nth-of-type(2n) {
         td {
             font-weight: bold;
             line-height: 1.7;
+            width: 20%;
             .date-range {
                 .grayed;
                 .opensanslight;
